...
                                    : IconButton(
                                        onPressed: () {
                                          context.read<ToggleBloc>().add(
                                              ToggleEvent.toggleVisibility);
                                        },
                                        icon: Icon(Icons.visibility)),
                                labelText: 'Password',
                                hintText: '🔑🔑',
                                keyboardType: TextInputType.visiblePassword,
                                obsecureText: toggleState.isVisible,
                                onChanged: (value) => context
                                    .read<LoginBloc>()
                                    .add(LoginPasswordChanged(password: value)),
...
